firefox scrolling//overflow-y bug

--- a/app/sass/base/_resets.scss
+++ b/app/sass/base/_resets.scss
@@ -11,9 +11,9 @@ strong { font-weight:600 }
 input { border:0;background:inherit;font-family:inherit }
 input:focus { outline:0 }
 figure { text-align:center }
-figcaption { font-size:0.96em }
+figcaption { font-size:0.9em }
 hr { border:0 }
 nav { letter-spacing:1px;font-weight:600 }
 sup { font-size:66% }
 ::selection { background:$color__white;color:$color__purple;text-shadow:0 0 transparent }
-::-webkit-scrollbar { width:0;height:0;background:transparent }
+::-webkit-scrollbar, ::-moz-horizontal-scrollbar { width:0;height:0;background:transparent }
